代码细节优化
仅支持Paper